--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+UnityProj/Shmup Project/Library/
+UnityProj/Shmup Project/Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
