--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ sysinfo.txt
 *.unitypackage
 UnityProj/Shmup Project/Library/
 UnityProj/Shmup Project/Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
+UnityProj/Shmup Project/Temp/
